# Diarna

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp
include/: diarna.h
include/diarna/: compiler_port.hpp  diarna.hpp
include/diarna/capture/: capture.hpp
include/diarna/collection/: collector.hpp  credential_harvester.hpp
include/diarna/comm/: protocol.hpp  reverse_shell.hpp  tor_client.hpp  transport.hpp
include/diarna/core/: config.hpp  framework.hpp
include/diarna/crypto/: chacha20.hpp
include/diarna/exec/: executor.hpp  exploit.hpp  injector.hpp  stub_injector.hpp
include/diarna/movement/: lateral.hpp
include/diarna/persistence/: manager.hpp
include/diarna/stealth/: anti_analysis.hpp  anti_hook.hpp  firmware.hpp  forensics.hpp  hells_gate.hpp  kernel_ops.hpp  memory_vault.hpp  nanomite.hpp  polymorph.hpp  remap.hpp  rop_engine.hpp  syscalls.hpp
include/obfuscation/: obfusheader.h
src/: framework.cpp
src/capture/: audio.cpp  screenshot.cpp  webcam.cpp  webrtc.cpp
src/collection/: collector.cpp  credential_harvester.cpp
src/comm/: protocol.cpp  reverse_shell.cpp  tor_client.cpp  transport.cpp
src/crypto/: chacha20.cpp
src/exec/: executor.cpp  exploit.cpp  injector.cpp  stub_injector.cpp
src/movement/: lateral.cpp
src/persistence/: manager.cpp
src/stealth/: anti_analysis.cpp  anti_hook.cpp  firmware.cpp  forensics.cpp  hells_gate.cpp  kernel_ops.cpp  memory_vault.cpp  nanomite.cpp  polymorph.cpp  remap.cpp  rop_engine.cpp  syscalls.cpp
